# assignment

./: Dockerfile  Makefile  README.md  pyproject.toml
src/: main.py
