[tool.poetry]
name = "cisco"
version = "0.1.0"
description = "Recrutiment project for cisco"
authors = ["Karol Sikora"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.75.1"
uvicorn = {extras = ["standard"], version = "^0.17.6"}
aiohttp = "^3.8.1"
aiodns = "^3.0.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
pytest = "^7.1.1"
mypy = "^0.942"
pytest-aiohttp = "^1.0.4"
pylint = "^2.13.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
